--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.6.1",
+    "@gsap/react": "^2.1.2",
     "@react-three/fiber": "^9.3.0",
     "antd": "^5.27.4",
+    "gsap": "^3.13.0",
     "motion": "^12.23.21",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
